# diabetes_prediction

./: pyproject.toml
diabetes_prediction/: diabetes_prediction.ipynb
